2003-05-05  James Henstridge  <james@daa.com.au>

	* modulesets/gnome24.modules: linc now requires the gnome-common
	autogen.sh script, so mark it as a dependency (fixes bug #112205).

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/gnome22.modules: Update XChat
	* modulesets/gnome24.modules: Same.

2003-04-23  James Henstridge  <james@daa.com.au>

	* jamesh.jhbuildrc (branches): set a custom branch to test things.

	* module.py (read_module_set): if a branch is listed in the
	branches dict, use it instead of the branch tag in the module set.

	* jhbuild.py (read_config_file): backward compat for 'cvsroot'
	setting was broken (key for gnome cvs is 'gnome.org'; not 'gnome').
	(default_config): add a branches dictionary.

	* jhbuild.py (do_update_one): add "jhbuild updateone" command
	(suggested by bug #109617).

	* modulesets/gnome24.modules: add evolution to this moduleset too.

	* modulesets/moduleset.xsl: update this too.

	* modulesets/moduleset.dtd: remove fcpackage element from DTD.

	* module.py (FcPackage): remove specialised fcpackage build rules.
	(read_module_set): get rid of parsing of <fcpackage> tags.

	* modulesets/gnome22.modules: same here, but use the fc-2_2_branch
	branch of fontconfig.

	* modulesets/gnome24.modules: get fontconfig,etc from CVS.

2003-04-22  James Henstridge  <james@daa.com.au>

	* modulesets/gnome1.modules: same here.

	* modulesets/gnome24.modules: same here.

	* modulesets/gnome22.modules: same here.

	* modulesets/gnome20.modules: add cvs roots.

	* jhbuild.py (*): fix up arguments to read_module_set.

	* module.py (read_module_set): read a set of cvsroots from the XML
	file that can be overriden from the jhbuildrc file.

	* cvs.py (login): new function to perform a cvs checkout

	* jhbuild.py (read_config_file): we now have a "cvsroots"
	dictionary, mapping keys to cvs roots.

2003-04-21  James Henstridge  <james@daa.com.au>

	* cvs.py (_scramble, _descramble): add functions to scramble and