@@ -1,3 +1,13 @@
+2003-05-05  Johan Dahlin  <jdahlin@async.com.br>
+
+	* module.py: Import check for xml.dom.minidom.
+	refactor get_mozilla_ver and put it under __init__
+	remove MozillaModule.do_install method, since it was on crack
+	Use .endswith instead of slicing in a couple of places
+	Add a few assertions
+	Make list comprehensions more readable
+	Strip text from raw_input()
+
 2003-05-05  James Henstridge  <james@daa.com.au>
 
 	* modulesets/gnome24.modules: linc now requires the gnome-common
